<resources>
    <string name="app_name">Grofast Supplier</string>
    <string name="company_name">Wingers It Services Pvt.Ltd</string>
    <string name="pvt">Powered by</string>
    <string name="add_profile_button">Add profile</string>
    <string name="add_image">Add Image</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="change_button">Change</string>
    <string name="save_change_button">Save Changes</string>
    <string name="your_store_name">Your Store Name</string>
    <string name="edit_profile_page_name">Edit Profile</string>
    <string name="notification_page_name">Notification</string>
    <string name="notification_setting_page_name">Notification Setting</string>
    <string name="Log_in_usename">Enter Username</string>
    <string name="login">Login</string>
    <string name="phonenumberhint">Enter phone number</string>
    <string name="continue_button">Continue</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="login_end_title">By continuing you agree to our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">T &amp; C</string>
    <string name="content_policy">Content Policy</string>
    <string name="home_page">Home</string>
    <string name="product_history"> Product </string>
    <string name="order_history"> Order </string>
    <string name="Payment_history"> Payment </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_product">Approved \nProduct</string>
    <string name="total_order">Total \nOrder</string>
    <string name="Resent_order_history">Resent Order History</string>
    <string name="total_earning">Total \nEarning</string>
    <string name="total_earning_Earning">Total Earning</string>
    <string name="Add_new_product">Add new Product</string>
    <string name="product_id">Product Id : </string>
    <string name="Product_name">Name</string>
    <string name="Product_description">Description</string>
    <string name="Product_price">Price</string>
    <string name="Product_Quantity">Quantity</string>
    <string name="categories">Categories : </string>
    <string name="Tax">Tax :  </string>
    <string name="per">Per :  </string>
    <string name="dicount">Discount :  </string>
    <string name="Quantity">Quantity : </string>
    <string name="detail">Detail : </string>
    <string name="Stock">Stock : </string>
    <string name="Return">Return : </string>
    <string name="product_discount">Discount</string>
    <string name="product_detail">Detail</string>
    <string name="product_per">Per</string>
    <string name="product_stock">In-Stock &amp; Out-Stock</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="return_plociy">Is Returnable</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="okay">Ok</string>
    <string name="select_category">Select Categories</string>
    <string name="select_tax">Select Tax</string>
    <string name="select_unit">Select Unit</string>
    <string name="edit_profile_image_heading">Edit Profile Image</string>
    <string name="change_image">Change Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="search_product_fragment">Search Item...</string>
    <string name="toast_message_enter_number">Enter a phone number</string>
    <string name="toast_message_valid_number">Enter a valid number</string>
    <string name="toast_message_enter_otp">Please enter the OTP</string>
    <string name="toast_message_correct_otp">Please enter correct otp</string>
    <string name="toast_message_resend_otp">Wait for resend code</string>
    <string name="toast_message_select_profile">Please select profile image</string>
    <string name="toast_message_select_return_policy">Please select Return Policy</string>
    <string name="toast_message_select_stock">Please select Stock</string>
    <string name="toast_message_select_gender">Please select Gender</string>
    <string name="toast_message_enter_name">Please enter your name</string>
    <string name="toast_message_enter_storename">Please enter your name</string>
    <string name="toast_message_enter_price">Please enter Price</string>
    <string name="toast_message_enter_quantity">Please enter Quantity</string>
    <string name="toast_message_enter_discount">Please enter Discount</string>
    <string name="toast_message_enter_detail">Please enter product Detail</string>
    <string name="toast_message_enter_per">Please enter per amount</string>
    <string name="toast_message_select_categories">Please Select Categories</string>
    <string name="toast_message_select_tax">Please Select Tax</string>
    <string name="toast_message_select_unit">Please Select Unit</string>
    <string name="toast_message_enter_email">Please enter E-mail id</string>
    <string name="toast_message_enter_mobile">Please enter Mobile no.</string>
    <string name="toast_message_enter_description">Please enter Description</string>
    <string name="toast_message_enter_storeaddress">Please enter Store Address</string>
    <string name="toast_message_enter_pincode">Please enter Pin_code</string>
    <string name="toast_message_enter_city">Please enter City</string>
    <string name="toast_message_enter_state">Please enter Store State</string>
    <string name="toast_message_enter_country">Please enter Country Name</string>
    <string name="toast_message_enter_valid_email">Please enter valid E-mail id</string>
    <string name="toast_message_enter_valid_mobileno">Please enter valid Mobile No.</string>
    <string name="toast_message_enter_valid_pincode">Please enter valid Pin code</string>
    <string name="toast_message_new_phone">Please change to a new phone number.</string>
    <string name="toast_coupon_code_copied">Coupon code copied</string>
    <string name="toast_select_country">Select country</string>
    <string name="toast_select_state">Select state</string>
    <string name="toast_select_city">Select city</string>
    <string name="toast_select_pincode">Select pincode</string>
    <string name="otp_title">OTP Verification</string>
    <string name="otp_message">We have sent a verification code to</string>
    <string name="otp_resed_button">Resend SMS</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_date_text">Delivery : </string>
    <string name="otp_time">Time</string>
    <string name="menu_home">HomePage</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_coupon">Coupon</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_notification_setting">Notification Setting</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_search_list">Search List</string>
    <string name="menu_edit_profile">Profile</string>
    <string name="menu_my_address">My Address</string>
    <string name="locations">Location</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_language">Language</string>
    <string name="menu_language_english">English</string>
    <string name="menu_language_hindi">Hindi</string>
    <string name="menu_cart">Cart</string>
    <string name="name">Name</string>
    <string name="store_name">Store Name</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="pincode">PinCode</string>
    <string name="city">City</string>
    <string name="city_hint">Enter your City</string>
    <string name="state">State</string>
    <string name="state_hint">Enter your State</string>
    <string name="country">Country</string>
    <string name="country_hint">Enter Country name </string>
    <string name="pincode_hint">Enter your PinCode</string>
    <string name="descrption">Description</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="edit_des">Add Description</string>
    <string name="location">Store Address</string>
    <string name="description">Description</string>
    <string name="location_hint">Your Store Location</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="add_product_name">Add item which not found in menu</string>
    <string name="add_coupon_name">Enter Coupon code</string>
    <string name="change_phone_number_title">Change Number</string>
    <string name="change_number">Change Number</string>
    <string name="notification_1_heading">Push Notifications</string>
    <string name="notification_1_sub_heading">Tap to enable notification</string>
    <string name="notification_2_heading">Enable all</string>
    <string name="notification_2_sub_heading">Activate all notification</string>
    <string name="notification_3_heading">Newsletters</string>
    <string name="notification_3_sub_heading">Receive newsletter to stay up-to date with whats brewing in food industry</string>
    <string name="notification_4_heading">Promos and offers</string>
    <string name="notification_4_sub_heading">Receive updates about coupons, promotions and money saving offers</string>
    <string name="notification_5_heading">Social notifications</string>
    <string name="notification_5_sub_heading">Get notified when someone follows your profile, or when you get likes and comments on reviews and photos posted by you</string>
    <string name="notification_email">Email</string>
    <string name="notification_push">Push</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="Termandcondition">Term and Condition</string>
    <string name="Sales_Policy">Sales Policy</string>
    <string name="Refund_policy">Refund Policy</string>
    <string name="Delete_account">Delete Account</string>
    <string name="canclelation">Cancellation Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="order_id_table">Order Id</string>
    <string name="customer_details_table">Customer Details</string>
    <string name="date_table">Date</string>
    <string name="price_table">Price</string>
    <string name="view_all">View All</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_product_page_name">Add Product</string>
    <string name="edit_product_page_name">Edit Product</string>
    <string name="earning_page">Earning</string>
    <string name="settings_policy">Policy</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_terms_and_conditions">Terms and conditions</string>
    <string name="settings_content_policy">Content policy</string>
    <string name="settings_refund_policy">Refund policy</string>
    <string name="settings_cancellation_policy">Cancellation policy</string>
    <string name="settings_delete_data_policy">Delete data policy</string>
    <string name="settings_delete_account_policy">Delete account policy</string>
    <string name="settings_report_policy">Report policy</string>
    <string name="settings_infrigment_policy">Infrigment policy</string>
    <string name="settings_grievance_policy">Grievance policy</string>
    <string name="settings_bsd_license_policy">BSD license</string>
    <string name="cancelation_policy">Cancellation Policy</string>
    <string name="settings_account">Account</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_delete_account">Delete account</string>
</resources>