<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit_profile"
        android:icon="@drawable/edit_profile"
        android:title="@string/menu_edit_profile" />
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/notification"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/menu_notification_setting"
        android:icon="@drawable/notificationsetting"
        android:title="@string/menu_notification_setting" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/setting"
        android:title="@string/menu_setting" />

    <item
        android:id="@+id/location"
        android:icon="@drawable/location_on_24"
        android:title="@string/location" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/menu_log_out" />
</menu>