<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@color/app_theme"
    android:orientation="vertical"
    tools:context=".Login_page">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/main_heading_color"
                    android:textSize="@dimen/text_Size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top_margin"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/line_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/login"
                        android:textColor="@color/line_text_color"
                        android:textSize="@dimen/hint_text_size"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/line_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top_margin"
                    android:background="@drawable/border_color"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="+91"
                        android:gravity="center"
                        android:textColor="@color/textview_text_color"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:background="@color/line_color" />

                    <EditText
                        android:id="@+id/phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/phonenumberhint"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/textview_text_color"
                        android:textColorHint="@color/default_color"
                        android:textSize="16sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:background="@drawable/button_round"
                    android:text="@string/continue_button"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top_margin"
                    android:gravity="center"
                    android:text="@string/login_end_title"
                    android:textColor="@color/line_text_color"
                    android:textSize="@dimen/hint_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/line_text_color"
                        android:textSize="@dimen/hint_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/terms_and_condition"
                        android:textColor="@color/line_text_color"
                        android:textSize="@dimen/hint_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/content_policy"
                        android:textColor="@color/line_text_color"
                        android:textSize="@dimen/hint_text_size" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</LinearLayout>